# robo4

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN-INDUSTRIAL.md  README.md  ROADMAP.md  ROADMAP_ROBOTICS.md  SECURITY.md  STATUS.md  package-lock.json  package.json  playwright_fiber.js  playwright_final.js  playwright_store.js  playwright_test.js  playwright_test2.js  playwright_test3.js  playwright_test4.js  playwright_zustand.js  safe3.nischay  test_ik_direct.mjs  verify2.js  verify3.js  verify4.js  verify_app.js  verify_interaction.js
.build-deps/zenoh-c-install/include/: zenoh_configure.h  zenoh_opaque.h
.build-deps/zenoh-c-install/lib/: zenohc.dll.lib
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.scratch2/: architecture-review.html  drive4.cjs  samples.json
backend/: config.py  main.py  requirements.txt
backend/comms/: serial_comm.py  websocket_comm.py
backend/routers/: arm.py  ws.py
esp32/: firmware.ino
esp32_zenoh/: firmware_zenoh.ino
frontend/: ARCHITECTURE.md  index.html  jsconfig.json  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/electron/: installer.nsh  launch.cjs  main.cjs  preload.cjs
frontend/scripts/: make-icons.cjs
frontend/src/: App.css  App.jsx  main.jsx  main.tsx  vite-env.d.ts
frontend/src/app/: App.css  App.jsx  App.tsx
frontend/src/components/: HUD.jsx  JointCard.jsx  LeftPanel.jsx  NavigationGizmo.jsx  ServoController.css  ServoController.jsx  SimCanvas.jsx  SimTransmitPanel.jsx  StatusBar.jsx  ViewControls.jsx
frontend/src/control/: controllerManager.ts  motion.test.ts  motionIntegration.test.ts  motionRuntime.ts  pid.ts  track2depth.test.ts
frontend/src/hardware/: HardwareBridge.js  HardwareBridge.ts  protocol.js  protocol.ts  transports.js  transports.ts
rtcore/: Cargo.toml  PHASE2-PLAN.md  README.md
rtcore/crates/fieldbus/: Cargo.toml
rtcore/crates/fieldbus/src/: cia402.rs  lib.rs  sim_slave.rs
rtcore/crates/ros-bridge/: Cargo.toml
rtcore/crates/ros-bridge/src/: lib.rs
rtcore/crates/rt-bus/: Cargo.toml
rtcore/crates/rt-bus/src/: lib.rs
rtcore/crates/rt-control/: Cargo.toml
rtcore/crates/rt-control/src/: controller.rs  lib.rs  safety.rs  trajectory.rs
rtcore/crates/rt-ethercat/: Cargo.toml
rtcore/crates/rt-ethercat/src/: lib.rs
rtcore/crates/rt-telemetry/: Cargo.toml
rtcore/crates/rt-telemetry/src/: lib.rs
rtcore/crates/rtcored/: Cargo.toml
rtcore/crates/rtcored/src/: main.rs
rtcore/crates/traj-io/: Cargo.toml
rtcore/crates/traj-io/src/: lib.rs
tools/: README.md  blender_tetrobot_import.py
(+382 files in other folders)
