[package]
name = "rt-ethercat"
version.workspace = true
edition.workspace = true
license.workspace = true

# Sim EtherCAT hardware: composes CiA 402 sim drives (fieldbus) behind the control core's
# HardwareInterface. The real EtherCatHardware will swap the sim slaves for a master binding.
[dependencies]
rt-control = { path = "../rt-control" }
fieldbus = { path = "../fieldbus" }
