[package]
name = "rt-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

# WebSocket telemetry out to the Studio. Runs OFF the real-time thread: the control loop
# only does a non-blocking `publish`; a server thread fans out to connected browsers.
[dependencies]
tungstenite = "0.29"
