[package]
name = "traj-io"
version.workspace = true
edition.workspace = true
license.workspace = true

# JSON interop with the Studio (frontend rtExport.ts). Kept in its own crate so the
# real-time core (rt-control) stays dependency-free — no parser in the hot loop.
[dependencies]
rt-control = { path = "../rt-control" }
serde_json = "1"
